# bevy_test

./: .gitattributes  Cargo.toml
assets/: main.assets.ron  main.game-info.ron  main.sprite-info.ron
assets/maps/TMX/: map_test_0.tmx  map_test_1.tmx  oryx_16-bit_fantasy_test.tmx  oryx_16bit_fantasy_world_tileset.tsx
src/: camera.rs  main.rs
src/helpers/: tiled.rs
