[package]
name = "sprite_sheet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_common_assets = { version = "0.9.0", features = ["ron"] }
bevy_ecs_tilemap = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", branch = "main" }
serde = "1.0.195"
thiserror = { version = "1.0" }
tiled = { version = "0.11.0", default-features = false }